# website

./: .gitignore  Procfile  README.md  app.json  default.nix  docker-compose.yml  docker-image.nix  fly.nix  main.go  terraform.tfvars.example  update.sh  website.tf
.github/workflows/: deploy.yml
app/: Cargo.toml
app/src/: config.rs  main.rs
app/src/service/: mod.rs  redirect.rs
conf/: nginx.conf
nix/: default.nix  sources.json
scripts/: update_certs.sh  update_dns.sh
static/: index.html
static/css/: main.css
www/: index.html
