[package]
name = "app"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
axum = "0.5.15"
figment = { version = "0.10.6", features = ["env"] }
http-body = "0.4.5"
hyper = { version = "0.14.20", features = ["tcp", "http1", "http2", "server"] }
serde = { version = "1.0.144", features = ["derive"] }
tokio = { version = "1.20.1", features = ["macros", "rt-multi-thread"] }
tower = { version = "0.4.13", features = ["make", "limit", "buffer", "util", "full"] }
tower-http = { version = "0.3.4", features = ["full"] }
tracing = "0.1.36"
tracing-subscriber = "0.3.15"
tracing-unwrap = "0.9.2"
